Fix: increase dialog width on smaller screen size

--- a/public/styles/share.css
+++ b/public/styles/share.css
@@ -151,3 +151,9 @@ dialog {
   text-decoration: none;
   color: #0052b6;
 }
+
+@media (max-width: 800px) {
+  dialog {
+    width: 100%;
+  }
+}
